# telephone

./: .coveragerc  .gitignore  LICENSE  README.md  get-audio-hw.sh
.github/workflows/: python-app.yml  test.yml  website.yml
app/: audio.py  audio_track.py  button.py  config.py  database.py  input.py  input_manager.py  keypad.py  main.py  requirements.txt  tasks.py  telephone.py
app/audio/: player.py  process.py  recorder.py
app/scripts/: clean.py
app/telephone/: base.py  desktop.py  gui.py  input_manager.py  tasks.py  telephone.py
app/telephone/tests/: test_audio_tracks.py  test_tasks.py
app/tests/: test_audio_track.py  test_audio_tracks.py  test_database.py  test_tasks.py
arduino/keypad/: keypad.ino
docs/: setup.md  v0-flowchart.md  v0-messages.md
rust/: Cargo.toml
rust/migrations/2022-10-31-183254_create_messages/: up.sql
rust/src/: action.rs  audio.rs  database.rs  lib.rs  main.rs  messages.rs  models.rs  schema.rs
setup/: boot.sh  quick-start.sh  rc.local  setup-audio.sh  telephone.service  telephone.sh
sql/: messages.sql  plays.sql
website/: .env  index.js  logger.js  package-lock.json  package.json  seed-db.js  server.js  server.test.js
website/public/: index.html
website/src/: App.jsx  App.tsx  config.ts  index.html  types.ts
website/src/components/: SkeletonTable.jsx  SkeletonTable.tsx
website/src/routes/: Home.jsx  Home.tsx  MessageDetails.jsx  MessageDetails.tsx  MessageList.jsx  MessageList.tsx  Messages.jsx
website/src/styles/: main.scss  table.scss
