[package]
name = "telephone"
version = "0.1.0"
edition = "2021"
default-run = "telephone"

[[bin]]
name = "telephone"
src = "src/main.rs"

[[bin]]
name = "audio-player"
src = "src/audio-player.rs"


[dependencies]
rodio = "0.16.0"
hound = "3.5.0"
portaudio = "0.7.0"
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
log = "0.4.17"
simple_logger = "4.0.0"
strum = "0.24.1"
strum_macros = "0.24"
tokio = { version = "1.28.1", features = ["full"] }
